@@ -12,6 +12,10 @@
      [session.c]
      Disable X11 forwarding if xauth binary is not found. Patch from Nalin
      Dahyabhai <nalin@redhat.com>; ok markus@
+   - markus@cvs.openbsd.org 2001/05/19 16:05:41           
+     [scp.c]                                              
+     ftruncate() instead of open()+O_TRUNC like rcp.c does
+     allows scp /path/to/file localhost:/path/to/file     
 
 20010528
  - (tim) [conifgure.in] add setvbuf test needed for sftp-int.c
@@ -5442,4 +5446,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1229 2001/06/05 19:29:20 mouring Exp $
+$Id: ChangeLog,v 1.1230 2001/06/05 19:31:41 mouring Exp $
